--- a/web/build.gradle
+++ b/web/build.gradle
@@ -270,14 +270,16 @@ task createSolverHtml {
     }
 }
 
-task prepareS3Upload(dependsOn: 'compileGwt') {
+task prepareS3Upload(dependsOn: ['compileGwt', 'copyHtml']) {
     doLast {
-        def dir = file("build/gwt/out/web3d");
-        fileTree(dir).each { f->
-            println "$f -> $f"
-            def outFile = file("$f".replace(dir.absolutePath, "build/s3/web3d/"))
-            file(outFile.parent).mkdirs();
-            ant.gzip(src: f, zipfile: outFile)
+        ["web3d", "webSimple"].each {module ->
+            def dir = file("build/gwt/out/$module");
+            fileTree(dir).each { f->
+                println "$f -> $f"
+                def outFile = file("$f".replace(dir.absolutePath, "build/s3/$module/"))
+                file(outFile.parent).mkdirs();
+                ant.gzip(src: f, zipfile: outFile)
+            }
         }
     }
 }
