--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,5 @@ stages:
 
 build:
   stage: build
+  script: java -version
   script: ./gradlew :web:prepareS3Upload :web:createDraftBundleZip :web:mergeDeploy -Pgdraft=true
