--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 	compile project(':editor-base')
 	compile project(':renderer-base')
     compile 'com.google.j2objc:annotations:2.2'
-    compile ("com.google.code.findbugs:annotations:3.0.1") {
+    compile ("com.google.code.findbugs:annotations:3.0.1u2") {
         exclude module: 'jsr305'
         exclude module: 'jcip-annotations'
     }
