--- a/ggbjdk/build.gradle
+++ b/ggbjdk/build.gradle
@@ -9,7 +9,7 @@ targetCompatibility = 1.7
 
 dependencies {
     compile project(':common')    
-    compile ("com.google.code.findbugs:annotations:3.0.1") {
+    compile ("com.google.code.findbugs:annotations:3.0.1u2") {
         exclude module: 'jsr305'
         exclude module: 'jcip-annotations'
     }
