--- a/input3D/impl/build.gradle
+++ b/input3D/impl/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 	compile project(':common'),
 		project(':common-jre'),
 		'org.eclipse.jetty:jetty-io:9.3.0.M2',
-		'org.eclipse.jetty:jetty-util:9.3.0.M2',
+		'org.eclipse.jetty:jetty-util:10.0.0-alpha0',
 		'org.eclipse.jetty.websocket:websocket-api:9.0.5.v20130815',
 		'org.eclipse.jetty.websocket:websocket-client:9.0.5.v20130815',
 		'org.eclipse.jetty.websocket:websocket-common:9.0.5.v20130815',
