MOW-817 Add web editor project, make version common

--- a/keyboard-web/build.gradle
+++ b/keyboard-web/build.gradle
@@ -14,7 +14,7 @@ evaluationDependsOn(':renderer-web')
 
 buildscript {
     dependencies {
-        classpath 'org.wisepersist:gwt-gradle-plugin:1.0.9'
+        classpath "org.wisepersist:gwt-gradle-plugin:$gwtGradlePluginVersion"
     }
 }
 
