--- a/gradle-scripts/versions.gradle
+++ b/gradle-scripts/versions.gradle
@@ -10,6 +10,7 @@ ext.getGeogebraVersion = { root = ".."->
 	    return version
 }
 
+ext.gwtGradlePluginVersion = '1.0.10'
 ext.gradleVersionGGB = "5.4.1"
 ext.joglVersion = '2.2.0'
 
