--- a/settings.gradle
+++ b/settings.gradle
@@ -26,6 +26,9 @@ include 'keyboard-base'
 include 'keyboard-scientific'
 include 'keyboard-web'
 
+include 'carota-editor'
+include 'carota-web'
+
 rootProject.name = 'geogebra'
 rootProject.children.each { project ->
     String projectName = project.name
