--- a/carota-web/build.gradle
+++ b/carota-web/build.gradle
@@ -4,6 +4,17 @@ buildscript {
     }
 }
 
-
 apply plugin: 'java'
+apply plugin: 'gwt-base'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
+gwt {
+    gwtVersion=gwtCompilerVersion
+}
+
+// Publish the sources in the gwt configuration
+artifacts {
+    gwt sourceSets.main.allSource.srcDirs, jar
+}
