--- a/web/build.gradle
+++ b/web/build.gradle
@@ -406,6 +406,7 @@ test {
 spotbugs {
     ignoreFailures = true
     excludeFilter = file("config/findbugs.xml")
+    jvmArgs = ['-Dfindbugs.sf.comment=true']
 }
 
 pmd {
