--- a/web/build.gradle
+++ b/web/build.gradle
@@ -121,10 +121,13 @@ gwt {
     
     maxHeapSize = '2000M'
 
+    jsInteropExports {
+        shouldGenerate = true;
+    }
+
     compiler {
         // Customize the GWT compiler here
         strict = true
-        // enableClosureCompiler = true;        
         disableCastChecking = true
       
         if (project.hasProperty("greport")) {
@@ -291,6 +294,7 @@ task run(type: JavaExec, dependsOn: ['jar','copyHtml', 'createSolverHtml']) {
         '-bindAddress', project.findProperty("gbind") ?: 'localhost',
         '-superDevMode',
         '-war', file(warDirRel),
+        '-generateJsInteropExports',
         devModule
     systemProperty 'gwt.persistentunitcachedir', '../build/gwt/devModeCache'
     systemProperty 'java.io.tmpdir', gwtGlobalCache.getAbsolutePath()
